--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlockTableViewCell.xib
@@ -7,44 +7,51 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="121" id="KGk-i7-Jjw" customClass="ContentBlockTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ContentBlockTableViewCell" rowHeight="121" id="KGk-i7-Jjw" customClass="ContentBlockTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="335" height="121"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nIv-r2-k2O">
+                    <imageView userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4bf2ccad86764c05b5c7f0eefc7e9f93.gif" translatesAutoresizingMaskIntoConstraints="NO" id="nIv-r2-k2O">
                         <rect key="frame" x="8" y="8" width="100" height="100"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="100" id="7CL-5x-kb9"/>
-                            <constraint firstAttribute="height" constant="100" id="SH9-Cc-6an"/>
+                            <constraint firstAttribute="width" constant="100" id="6K4-Pj-6KN"/>
+                            <constraint firstAttribute="height" constant="100" id="nxE-cp-nmk"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gkk-b8-aKr">
-                        <rect key="frame" x="116" y="37" width="211" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="khd-fo-I9i">
-                        <rect key="frame" x="116" y="8" width="211" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="khd-fo-I9i">
+                        <rect key="frame" x="116" y="8" width="195" height="21"/>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gkk-b8-aKr">
+                        <rect key="frame" x="116" y="37" width="195" height="23"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="23" id="6Yu-pJ-qLO"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="angleRight" translatesAutoresizingMaskIntoConstraints="NO" id="8aZ-A4-9fa">
+                        <rect key="frame" x="319" y="53" width="8" height="13"/>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Gkk-b8-aKr" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="4OA-HE-7Sn"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="Gkk-b8-aKr" secondAttribute="bottom" constant="52" id="CSY-2y-BN6"/>
                     <constraint firstItem="nIv-r2-k2O" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="FUu-hs-26Q"/>
+                    <constraint firstItem="8aZ-A4-9fa" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="FhB-kl-E3V"/>
+                    <constraint firstItem="Gkk-b8-aKr" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="-16" id="HtJ-ay-Sr9"/>
                     <constraint firstItem="nIv-r2-k2O" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="KqH-DJ-wjW"/>
-                    <constraint firstItem="Gkk-b8-aKr" firstAttribute="leading" secondItem="khd-fo-I9i" secondAttribute="leading" id="TXT-Mk-9Vw"/>
-                    <constraint firstItem="khd-fo-I9i" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="XmL-3Y-vgK"/>
-                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Gkk-b8-aKr" secondAttribute="bottom" constant="54" id="YbU-9C-9K3"/>
-                    <constraint firstItem="khd-fo-I9i" firstAttribute="leading" secondItem="nIv-r2-k2O" secondAttribute="trailing" constant="8" id="eWF-bx-xGu"/>
-                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="nIv-r2-k2O" secondAttribute="bottom" constant="4" id="swk-ek-W12"/>
-                    <constraint firstItem="Gkk-b8-aKr" firstAttribute="top" secondItem="khd-fo-I9i" secondAttribute="bottom" constant="8" id="zhK-Y2-7bZ"/>
-                    <constraint firstItem="khd-fo-I9i" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="zsc-ct-GsF"/>
+                    <constraint firstItem="khd-fo-I9i" firstAttribute="leading" secondItem="nIv-r2-k2O" secondAttribute="trailing" constant="8" id="LG5-am-xqk"/>
+                    <constraint firstItem="Gkk-b8-aKr" firstAttribute="top" secondItem="khd-fo-I9i" secondAttribute="bottom" constant="8" id="VHf-34-ybt"/>
+                    <constraint firstItem="khd-fo-I9i" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="-16" id="eJO-x9-sRW"/>
+                    <constraint firstItem="Gkk-b8-aKr" firstAttribute="leading" secondItem="khd-fo-I9i" secondAttribute="leading" id="j1e-zX-GRZ"/>
+                    <constraint firstItem="khd-fo-I9i" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="j7b-wQ-UnC"/>
+                    <constraint firstItem="nIv-r2-k2O" firstAttribute="centerY" secondItem="8aZ-A4-9fa" secondAttribute="centerY" constant="-1.5" id="z2r-C8-0gZ"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -52,7 +59,11 @@
                 <outlet property="contentImageView" destination="nIv-r2-k2O" id="bir-Uh-6EZ"/>
                 <outlet property="contentTitleLabel" destination="khd-fo-I9i" id="KoO-F4-pdP"/>
             </connections>
-            <point key="canvasLocation" x="379.5" y="551.5"/>
+            <point key="canvasLocation" x="491.5" y="485.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="4bf2ccad86764c05b5c7f0eefc7e9f93.gif" width="500" height="226"/>
+        <image name="angleRight" width="8" height="13"/>
+    </resources>
 </document>
