--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/LinkBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/LinkBlockTableViewCell.xib
@@ -6,15 +6,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LinkBlockTableViewCell" rowHeight="78" id="KGk-i7-Jjw" customClass="LinkBlockTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="78"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LinkBlockTableViewCell" rowHeight="69" id="KGk-i7-Jjw" customClass="LinkBlockTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="72"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMs-iS-weg">
+                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                        <state key="normal">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="linkClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="OVd-N3-xB0"/>
+                        </connections>
+                    </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oTR-s9-34N">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="68"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sQI-f1-ya2">
                                 <rect key="frame" x="8" y="8" width="52" height="52"/>
@@ -23,14 +32,17 @@
                                     <constraint firstAttribute="height" constant="52" id="rOi-td-l6b"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mE-iO-IL7">
-                                <rect key="frame" x="82" y="39" width="230" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mE-iO-IL7">
+                                <rect key="frame" x="68" y="39" width="244" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="Fx2-Rx-3ik"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ra4-P8-pN7">
-                                <rect key="frame" x="82" y="8" width="230" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ra4-P8-pN7">
+                                <rect key="frame" x="68" y="8" width="244" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -38,37 +50,25 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="0mE-iO-IL7" secondAttribute="bottom" constant="15" id="71b-Wu-c0a"/>
-                            <constraint firstItem="sQI-f1-ya2" firstAttribute="leading" secondItem="oTR-s9-34N" secondAttribute="leading" constant="8" id="CFL-ck-2Pu"/>
-                            <constraint firstItem="ra4-P8-pN7" firstAttribute="top" secondItem="oTR-s9-34N" secondAttribute="top" constant="8" id="F8h-og-kEF"/>
-                            <constraint firstAttribute="trailing" secondItem="0mE-iO-IL7" secondAttribute="trailing" constant="8" id="Fbt-gq-58Q"/>
-                            <constraint firstItem="sQI-f1-ya2" firstAttribute="top" secondItem="oTR-s9-34N" secondAttribute="top" constant="8" id="MDq-of-HgF"/>
-                            <constraint firstAttribute="trailing" secondItem="ra4-P8-pN7" secondAttribute="trailing" constant="8" id="Pcg-yr-diH"/>
-                            <constraint firstItem="0mE-iO-IL7" firstAttribute="leading" secondItem="sQI-f1-ya2" secondAttribute="trailing" constant="22" id="QkV-db-XeW"/>
-                            <constraint firstItem="ra4-P8-pN7" firstAttribute="leading" secondItem="sQI-f1-ya2" secondAttribute="trailing" constant="22" id="ltc-fW-scu"/>
-                            <constraint firstItem="ra4-P8-pN7" firstAttribute="leading" secondItem="0mE-iO-IL7" secondAttribute="leading" id="vJj-Pn-TNt"/>
-                            <constraint firstItem="0mE-iO-IL7" firstAttribute="top" secondItem="ra4-P8-pN7" secondAttribute="bottom" constant="10" id="x60-3u-k3u"/>
+                            <constraint firstItem="ra4-P8-pN7" firstAttribute="leading" secondItem="0mE-iO-IL7" secondAttribute="leading" id="4A3-P4-L5a"/>
+                            <constraint firstItem="ra4-P8-pN7" firstAttribute="top" secondItem="oTR-s9-34N" secondAttribute="top" constant="8" id="Cem-Tr-XNb"/>
+                            <constraint firstAttribute="trailing" secondItem="ra4-P8-pN7" secondAttribute="trailing" constant="8" id="NRg-fv-vsO"/>
+                            <constraint firstItem="sQI-f1-ya2" firstAttribute="top" secondItem="oTR-s9-34N" secondAttribute="top" constant="8" id="ZAG-en-3vM"/>
+                            <constraint firstItem="sQI-f1-ya2" firstAttribute="leading" secondItem="oTR-s9-34N" secondAttribute="leading" constant="8" id="imc-s3-wme"/>
+                            <constraint firstItem="ra4-P8-pN7" firstAttribute="leading" secondItem="sQI-f1-ya2" secondAttribute="trailing" constant="8" id="j2W-aj-fOC"/>
+                            <constraint firstItem="0mE-iO-IL7" firstAttribute="top" secondItem="ra4-P8-pN7" secondAttribute="bottom" constant="10" id="khq-i9-qXw"/>
+                            <constraint firstItem="ra4-P8-pN7" firstAttribute="width" secondItem="0mE-iO-IL7" secondAttribute="width" id="pKn-Ah-xpy"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="68" id="q2l-eO-9Kt"/>
+                            <constraint firstAttribute="bottom" secondItem="0mE-iO-IL7" secondAttribute="bottom" constant="8" id="wZR-G0-CUB"/>
                         </constraints>
                     </view>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dMs-iS-weg">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="78"/>
-                        <state key="normal">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <connections>
-                            <action selector="linkClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="OVd-N3-xB0"/>
-                        </connections>
-                    </button>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="oTR-s9-34N" secondAttribute="bottom" constant="2" id="4Tw-kp-o1z"/>
+                    <constraint firstAttribute="bottom" secondItem="oTR-s9-34N" secondAttribute="bottom" constant="3" id="4Tw-kp-o1z"/>
                     <constraint firstItem="oTR-s9-34N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="AWK-10-juO"/>
                     <constraint firstAttribute="trailing" secondItem="oTR-s9-34N" secondAttribute="trailing" id="Kkv-96-Rpp"/>
                     <constraint firstItem="oTR-s9-34N" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="cjX-I8-OZE"/>
-                    <constraint firstItem="oTR-s9-34N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="e29-rO-lj2"/>
-                    <constraint firstItem="oTR-s9-34N" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="kgr-F4-2NT"/>
-                    <constraint firstAttribute="trailing" secondItem="oTR-s9-34N" secondAttribute="trailing" id="wr7-v2-GRb"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -77,7 +77,7 @@
                 <outlet property="titleLabel" destination="ra4-P8-pN7" id="iVY-TK-BKH"/>
                 <outlet property="viewForBackgroundColor" destination="oTR-s9-34N" id="xg5-Qm-WnH"/>
             </connections>
-            <point key="canvasLocation" x="410" y="487"/>
+            <point key="canvasLocation" x="410" y="482"/>
         </tableViewCell>
     </objects>
 </document>
